# yt-kotoba

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  SKILL.md  pyproject.toml
examples/: voice.example.yaml
yt_kotoba/: __init__.py  cli.py  config.py  download.py  pack_transcript.py  transcribe.py
